--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "common-catalog-schema": "^0.1.3",
     "express": "^4.16.4",
-    "fuse.js": "^3.4.4"
+    "fuse.js": "^3.4.4",
+    "pluralize": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
