--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A catalog service that finds an item or returns options to find an item",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index\"",
+    "build:watch": "tsc -w",
+    "dev": "nodemon dist/index",
     "start": "tsc && node dist/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,11 +15,12 @@
     "common-catalog-schema": "^0.1.3",
     "express": "^4.16.4",
     "fuse.js": "^3.4.4",
+    "ngraph.graph": "0.0.18",
+    "ngraph.path": "^1.1.0",
     "pluralize": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
-    "concurrently": "^4.1.0",
     "nodemon": "^1.18.10",
     "tslint": "^5.14.0",
     "tslint-config-standard": "^8.0.1",
