--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build:watch": "tsc -w",
     "dev": "nodemon dist/index",
+    "clean": "rm -rf dist",
     "start": "tsc && node dist/index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Hao Luo <howlowck@gmail.com>",
   "license": "MIT",
@@ -21,7 +22,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.12.0",
+    "jest": "^24.5.0",
     "nodemon": "^1.18.10",
+    "ts-jest": "^24.0.0",
     "tslint": "^5.14.0",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.3.4000"
